redis-cache/redis/StatefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
spec:
  serviceName: redis-headless
  replicas: 3

  selector:
    matchLabels:
      environment: prod
      tier: cache
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis
      app.kubernetes.io/version: "7.2"
      app.kubernetes.io/component: redis

  template:
    metadata:
      labels:
        environment: prod
        tier: cache
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: redis
        app.kubernetes.io/version: "7.2"
        app.kubernetes.io/component: redis
    spec:
      serviceAccountName: redis
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              environment: prod
              tier: cache
              app.kubernetes.io/name: redis
              app.kubernetes.io/instance: redis
              app.kubernetes.io/version: "7.2"
              app.kubernetes.io/component: redis
      containers:
        - name: redis
          image: redis@sha256:595cc6f2bb3af6e03347b90deb6123c6aa2c81dea05ce08128de8a174b6ac67b #redis:7.4
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - All
            seccompProfile:
              type: RuntimeDefault
          command:
            - sh
            - -c
            - |
              cp /etc/redis/redis.conf /tmp/redis.conf

              echo "aclfile /etc/redis/generated/users.acl" >> /tmp/redis.conf

              POD_NAME=$(hostname)

              if [ "$POD_NAME" = "redis-0" ]; then
                echo "Starting as primary"
                redis-server /tmp/redis.conf
              else
                echo "Starting as replica"
                redis-server /tmp/redis.conf \
                  --replicaof redis-0.redis-headless.redis.svc.cluster.local 6379 \
                  --masteruser replication \
                  --masterauth ${REPLICATION_PASSWORD}
              fi
          ports:
            - name: redis
              containerPort: 6379

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli --user admin $ADMIN_PASSWORD ping
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli --user admin $ADMIN_PASSWORD ping
            initialDelaySeconds: 20
            periodSeconds: 10

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/redis
            - name: generated-acl
              mountPath: /etc/redis/generated
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: config
          configMap:
            name: redis-config
        - name: acl-template
          configMap:
            name: redis-acl-template
        - name: generated-acl
          emptyDir:
            medium: Memory
        - name: tmp
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
