redis-cache/redis/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: redis
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
