redis-cache/redis/NetworkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-replication
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      environment: prod
      tier: cache
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis
      app.kubernetes.io/version: "7.2"
      app.kubernetes.io/component: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              environment: prod
              tier: cache
              app.kubernetes.io/name: redis
              app.kubernetes.io/instance: redis
              app.kubernetes.io/version: "7.2"
              app.kubernetes.io/component: redis
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      environment: prod
      tier: cache
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis
      app.kubernetes.io/version: "7.2"
      app.kubernetes.io/component: redis
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: php-app
          podSelector:
            matchLabels:
              environment: prod
              tier: frontend
              app.kubernetes.io/name: php-app
              app.kubernetes.io/instance: php-app
              app.kubernetes.io/version: "1.0"
              app.kubernetes.io/component: frontend
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sentinel-to-redis
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      environment: prod
      tier: cache
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis
      app.kubernetes.io/version: "7.2"
      app.kubernetes.io/component: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              environment: prod
              tier: cache
              app.kubernetes.io/name: sentinel
              app.kubernetes.io/instance: sentinel
              app.kubernetes.io/version: "7.2"
              app.kubernetes.io/component: sentinel
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
